# raspicam-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  install.sh
examples/basic_capture/: Cargo.toml
examples/basic_capture/src/: main.rs
examples/opencv_capture/src/: main.rs
examples/realtime_capture/: Cargo.toml
examples/realtime_capture/src/: main.rs
examples/simple_capture/: Cargo.toml
examples/simple_capture/src/: main.rs
src/: autocxx_ffi_default_gen.rs  binding_generator.rs  lib.rs
