[package]
name = "raspicam-rs"
version = "0.1.1"
description = "Pragmatic Rust bindings to the raspicam C++ library"
license = "MIT"
edition = "2021"
links = "raspicam-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
autocxx-build = "0.22.4"
cxx-build = "1.0.76"

[dependencies]
autocxx = "0.22.4"
cxx = "1.0.78"
opencv = { version = "0.70.0", optional = true }

[features]
opencv = ["dep:opencv"]
